tools/sddl/assembler/tests/fail/math_div_with_param.asm
# EXPECT-ERROR: Unknown instruction or unexpected token
push.i32 20
push.i32 5
math.div 0
halt
